--- a/API TESTING/pom.xml
+++ b/API TESTING/pom.xml
@@ -95,9 +95,19 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.19.0</version>
         </dependency>
-
-
-
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.23.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.23.0</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
